# kartochka

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_last_active_at.py  0003_add_catalog_and_marketplace.py
kartochka/: config.py  database.py  main.py  metrics.py
kartochka/models/: __init__.py  catalog_batch.py  catalog_item.py  generation.py  marketplace_credential.py  subscription.py  template.py  user.py
kartochka/routers/: auth.py  billing.py  catalog.py  generations.py  marketplace_credentials.py  pages.py  templates.py  uploads.py
kartochka/schemas/: billing.py  catalog_batch.py  catalog_item.py  generation.py  marketplace_credential.py  subscription.py  template.py  user.py
kartochka/services/: auth_service.py  batch_service.py  catalog_service.py  encryption_service.py  image_service.py  notification_service.py  ozon_service.py  payment_service.py  storage_service.py  template_service.py  wildberries_service.py
kartochka/utils/: dependencies.py  helpers.py  logging.py  plan_checks.py
kartochka/workers/: celery_app.py  (+1 more)
templates/: api_docs.html  base.html  billing.html  catalog_batch.html  catalog_batches.html  catalog_upload.html  dashboard.html  editor.html  generation_new.html  generation_result.html  login.html  marketplace_connect.html  onboarding.html  pricing.html  register.html  settings.html  templates_list.html
tests/: conftest.py  test_auth.py  test_batch_service.py  test_billing.py  test_catalog_api.py  test_catalog_service.py  test_generations.py  test_image_service.py  test_marketplace_credentials.py  test_security.py  test_templates.py
(+11 files in other folders)
