[tool.poetry]
name = "kartochka"
version = "0.1.0"
description = "Сервис автогенерации карточек товаров для маркетплейсов"
authors = ["Kartochka Dev <dev@kartochka.ru>"]
packages = [{include = "kartochka"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = ">=0.29.0"
alembic = "^1.13.1"
pillow = ">=10.2.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.7"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiofiles = "^23.2.1"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"
aiosqlite = "^0.19.0"
greenlet = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
types-passlib = "^1.7.7"
types-aiofiles = "^23.2.0"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["kartochka"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=kartochka --cov-report=term-missing --cov-fail-under=40"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
